[package]
name = "easy-fs-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.21"
easy-fs = { path = "../easy-fs" }
pretty_assertions = "1.3.0"
rand = "0.8.0"

[features]
board_qemu = []
board_k210 = []
