[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8.0"
riscv = { version = "0.8.0" }

[profile.release]
debug = true

[features]
board_qemu = []
